--- a/modern/index.html
+++ b/modern/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="${colorPrimary}" />
-  <meta name="description" content="${description}" />
+  <meta name="description" content="Tonbridge Traccar" />
   <link rel="icon" href="/favicon.ico" />
   <link rel="apple-touch-icon" href="/apple-touch-icon-180x180.png" sizes="180x180" />
   <link rel="manifest" href="/manifest.webmanifest" />
